# libtrash

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.cpp
.github/workflows/: ci.yml
include/librecycle/: recycle.hpp
include/libtrash/: trash.hpp
src/: trash.cpp  trash_detail.hpp  trash_mac.mm  trash_nix.cpp  trash_nix_detail.hpp  trash_unsupported.cpp  trash_win.cpp
tests/: CMakeLists.txt  test_linux_fdo.cpp  test_mac.mm  test_win.cpp
